--- a/conf.yaml
+++ b/conf.yaml
@@ -26,9 +26,9 @@ model:
   _target_: models.PreActResNet.ResNet18
 
 data_loading:
-  num_workers: 16
-  num_threads: 8
-  prefetch_size: 4
+  num_workers: 8
+  num_threads: 4
+  prefetch_size: 2
   progress_bar: True
 
 training:
@@ -39,9 +39,9 @@ training:
   weight_decay: 0.0005
 
 hparams:
-  resize: null
-  crop_size: null
-  prob_random_h_flip: 0.5
+  resize: [36, 36]
+  crop_size: [32, 32]
+  prob_random_flip: 0.5
   mean: null
   std: null
   clipped_norm: null
