Implement crop_and_padding for data augmentation

--- a/conf.yaml
+++ b/conf.yaml
@@ -37,13 +37,14 @@ training:
   num_epochs: 300
   momentum: 0.9
   weight_decay: 0.0005
-  dropout_rate: 0.1
+  dropout_rate: 0.
   clipped_norm: 10
   eval_every_n_epochs: 10
 
 hparams:
   resize: null
-  crop_size: null
+  padding_px: 4
+  crop_size: [32, 32]
   prob_random_flip: 0.5
   mean: null
   std: null
